# SoundMixr

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE.txt  README.md
effects/: Chorus.cpp  Compressor.hpp  Delay.cpp  Dynamics.cpp  EffectBase.hpp  Equalizer.cpp  Filters.hpp  Flanger.cpp  Oscillator.hpp  Reverb.cpp  Utility.cpp
generators/: SimpleSynth.cpp
include/: Audio.hpp  ChannelBase.hpp  Controller.hpp  CrashLogger.hpp  EffectLoader.hpp  FileDialog.hpp  Midi.hpp  PluginLoader.hpp  pch.hpp
include/Audio/: Audio.hpp  Channel.hpp  Parameter.hpp
include/Gui/: Channel.hpp  ChannelPanel.hpp  DeviceList.hpp  GainSlider.hpp  Parameter.hpp  RouteButton.hpp  Slider.hpp  Units.hpp
include/audio/: Asio.hpp  AsioDevice.hpp  Audio.hpp  AudioController.hpp  Channel.hpp  ChannelBase.hpp  Compressor.hpp  Delay.hpp  Dynamics.hpp  Effect.hpp  EffectChain.hpp  EffectPanel.hpp  Effects.hpp  EndpointChannel.hpp  Equalizer.hpp  Filters.hpp  Formant.hpp  ForwardChannel.hpp  Generator.hpp  GeneratorChain.hpp  GeneratorChannel.hpp  GeneratorFrame.hpp  Oscillator.hpp  Plugin.hpp  Reverb.hpp  SoundboardChannel.hpp  Utility.hpp
include/data/: concurrentqueue.hpp
include/midi/: Midi.hpp
include/ui/: ChannelPanel.hpp  Components.hpp  Dropdown.hpp  EffectPanel.hpp  EndpointPanel.hpp  Frame.hpp  Graphics.hpp  LayoutPanel.hpp  ListPanel.hpp  Parameter.hpp  SettingsPanel.hpp  Slider.hpp  Soundboard.hpp  VolumeSlider.hpp
libs/: CMakeLists.txt
plugins/: Chorus.cpp  Delay.cpp  Dynamics.cpp  Equalizer.cpp  Flanger.cpp  Gate.cpp  SimpleSynth.cpp  Utility.cpp
resources/: icon.aps  icon.rc  resource.h  resource.rc
source/: Audio.cpp  ChannelBase.cpp  Controller.cpp  EffectLoader.cpp  EntryPoint.cpp  Midi.cpp  PluginLoader.cpp
source/Audio/: Audio.cpp  Channel.cpp
source/Gui/: Channel.cpp  ChannelPanel.cpp  GainSlider.cpp  Parameter.cpp  Slider.cpp
source/audio/: Asio.cpp  AsioDevice.cpp  Audio.cpp  Channel.cpp  ChannelBase.cpp  Dynamics.cpp  Effect.cpp  EffectChain.cpp  EffectPanel.cpp  Effects.cpp  EndpointChannel.cpp  GeneratorChannel.cpp  GeneratorFrame.cpp  Plugin.cpp  SoundboardChannel.cpp
source/ui/: ChannelPanel.cpp  Components.cpp  EffectPanel.cpp  Frame.cpp  Graphics.cpp  ListPanel.cpp  Parameter.cpp  Slider.cpp  Sliders.cpp  Soundboard.cpp  VolumeSlider.cpp
